# Stock-Market-Portfolio-Manager

./: .gitignore  README.md  accounts.memory  example_gradio_app.py  pyproject.toml  requirements.txt
main/: app.py
main/accounts/: accounts.py  accounts_client.py
main/gradio_ui/: builder.py  styles.py  views.py
main/markets/: market.py
main/mcp_servers/: accounts_server.py  email_server.py  market_server.py  mcp_params.py
main/memory/: Cathie.db  George.db  Ray.db  Warren.db  accounts.db  accounts.memory
main/prompts/: reset.py  templates.py
main/trading/: traders.py  trading_floor.py
main/utils/: constants.py  database.py  tracers.py  util.py
